# integration-uprightdiff

./: .gitignore  .gitreview  BlockMotionSearch.cpp  BlockMotionSearch.h  ImageDiff.cpp  ImageDiff.h  LICENSE  Logger.h  Makefile  Makefile.am  OutwardAlternatingSearch.h  README.md  RollingBlockCounter.h  UprightDiff.cpp  UprightDiff.h  configure.ac  fback.cpp  imagediff.cpp  linehash.cpp  main.cpp  uprightdiff.1
debian/: changelog  control  copyright  gbp.conf  manpages  watch
test/: RollingBlockCounterTest.cpp
tests/: RollingBlockCounterTest.cpp
